# Paladin

./: README.md  main.py  pyproject.toml  requirements.txt
data/: emoji.json
data/commands/: add.mute.user.json  add.user.json  add.warn.user.json  ban.user.json  channel.role.permissions.json  channel.user.permissions.json  clear.mute.user.json  clear.warn.user.json  disable.autodelete.json  guild.role.permissions.json  guild.user.permissions.json  info.user.json  kick.user.json  purge.messages.json  reason.json  remove.user.json  setrole.mute.user.json  setup.autodelete.json
source/: bot.py  databaseManager.py  dataclass.py  enums.py  events.py  jsonManager.py  messageObject.py  monkeypatch.py  pagination.py  shared.py  utilities.py
source/cogs/: autoDelete.py  base.py  baseModeration.py  config.py  linkDetection.py  listPermissions.py  logAction.py  modlog.py  modmail.py  mute.py  userInfo.py  userWarn.py  voteChannel.py
