[tool.poetry]
name = "paladin"
version = "0.7.0"
description = "A discord moderation bot using slash commands"
authors = ["LordOfPolls <ddavidallen13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.0.1"
discord-py-slash-command = {git = "https://github.com/benwoo1110/discord-py-slash-command.git", branch = "permissions"}
colorlog = "^5.0.0"
fuzzywuzzy = "^0.18.0"
toml = "^0.10.2"
APScheduler = "^3.7.0"
redis = "^3.5.3"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
fuzzywuzzy = ["speedup"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
ensure_newline_before_comments = true
include_trailing_comma = true